--- a/src/main/webapp/script/cliente/Create.xhtml
+++ b/src/main/webapp/script/cliente/Create.xhtml
@@ -25,7 +25,8 @@
                     <h:panelGrid id="datosDelCliente" columns="3">
                         <p:outputLabel id="rutLbl" value="#{bundle.CreateClienteLabel_rut}" for="rut" style="font-weight:bold"/>
                         <p:inputText id="rut" value="#{clienteController.selected.rut}" 
-                                     title="#{bundle.CreateClienteTitle_rut}" validator="#{inputValidationBean.validarRut}">
+                                     title="#{bundle.CreateClienteTitle_rut}" validator="#{inputValidationBean.validarRut}"
+                                     required="true" requiredMessage="Es necesario el RUT del cliente">
                             <p:ajax event="blur" listener="#{clienteController.onBlurRutInput}" update=":form"/>
                         </p:inputText>
                         <p:message id="rutMsg" display="both" for="rut"/>
