--- a/src/main/webapp/script/cliente/Edit.xhtml
+++ b/src/main/webapp/script/cliente/Edit.xhtml
@@ -89,7 +89,7 @@
                     </p:outputPanel>
 
                     <f:facet name="footer">
-                        <p:commandButton action="#{clienteController.update}" value="Guardar" ajax="true" update=":form"/>                     
+                        <p:commandButton action="#{clienteController.update}" value="Guardar" ajax="false" update=":form"/>                     
                         <p:commandButton action="#{clienteController.prepareList}" value="Volver" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
                     </f:facet> 
 
