--- a/src/main/webapp/script/agenda.xhtml
+++ b/src/main/webapp/script/agenda.xhtml
@@ -169,25 +169,26 @@
 
         <ui:define name="body" id="body">
 
-            <pe:layoutPane position="center" id="listaInbox" >                   
+            <pe:layoutPane position="center" id="listaInbox">                   
+                <div style="margin-top: 12px !important;">
 
+                    <h:panelGroup id="panel">
 
-                <h:panelGroup id="panel">
+                        <h:form id="formAgendarEvento">
+                            <p:schedule id="myschedule" value="#{globalScheduleController.lazyScheduleEventsModel}" 
+                                        firstHour="8" widgetVar="myschedule" >
+                                <p:ajax event="dateSelect" listener="#{globalScheduleController.onDateSelect}" 
+                                        update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
+                                <p:ajax event="eventSelect" listener="#{globalScheduleController.onEventSelect}" 
+                                        update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
 
-                    <h:form id="formAgendarEvento">
-                        <p:schedule id="myschedule" value="#{globalScheduleController.lazyScheduleEventsModel}" 
-                                    firstHour="8" widgetVar="myschedule" >
-                            <p:ajax event="dateSelect" listener="#{globalScheduleController.onDateSelect}" 
-                                    update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
-                            <p:ajax event="eventSelect" listener="#{globalScheduleController.onEventSelect}" 
-                                    update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
+                                <p:ajax event="eventMove" listener="#{globalScheduleController.onEventMove}" update=":mainform:messages" />  
+                                <p:ajax event="eventResize" listener="#{globalScheduleController.onEventResize}" update=":mainform:messages" /> 
+                            </p:schedule>
+                        </h:form>
 
-                            <p:ajax event="eventMove" listener="#{globalScheduleController.onEventMove}" update=":mainform:messages" />  
-                            <p:ajax event="eventResize" listener="#{globalScheduleController.onEventResize}" update=":mainform:messages" /> 
-                        </p:schedule>
-                    </h:form>
-
-                </h:panelGroup>
+                    </h:panelGroup>
+                </div>
             </pe:layoutPane>
 
         </ui:define>
@@ -506,7 +507,7 @@
 
                                             <p:column>
                                                 <h:inputText id="idAccionCustom" value="#{globalScheduleController.event.data.parametrosAccion}"  styleClass="form-control"
-                                                          
+
                                                              title="#{bundle.CreateAccionLabel_parametros}"/>
                                                 <p:message for="idAccionCustom"/>
                                             </p:column>
